--- a/p8105_hw5_zl3386.md
+++ b/p8105_hw5_zl3386.md
@@ -387,6 +387,9 @@ for(mu in 0:6) {
 }
 ```
 
+Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of μ on the x axis.
+
 ``` r
 # power of the test
 results |>
@@ -396,7 +399,18 @@ results |>
   labs(title = "Power of the test")
 ```
 
-![](p8105_hw5_zl3386_files/figure-gfm/plots-1.png)<!-- -->
+![](p8105_hw5_zl3386_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+- From the plot, we can see that there’s a positive association between
+  effect size and power, which means when the difference between the
+  true μ and the null value 0 increases, there’s a higher probability of
+  rejecting the false null hypothesis.
+
+- Also, as μ gets larger, the increasing of power will slow down and
+  approach the maximum value of 1.
+
+Make a plot showing the average estimate of $\hat{μ}$ on the y axis and
+the true value of μ on the x axis.
 
 ``` r
 results |>
@@ -406,7 +420,11 @@ results |>
   labs(title = "Average estimate of mu")
 ```
 
-![](p8105_hw5_zl3386_files/figure-gfm/plots-2.png)<!-- -->
+![](p8105_hw5_zl3386_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+
+Make a second plot showing the average estimate of $\hat{μ}$ **only in
+samples for which the null was rejected** on the y axis and the true
+value of μ on the x axis.
 
 ``` r
 results |>
@@ -416,4 +434,15 @@ results |>
   labs(title = "Average estimate of mu in null rejected samples")
 ```
 
-![](p8105_hw5_zl3386_files/figure-gfm/plots-3.png)<!-- -->
+![](p8105_hw5_zl3386_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+- From the plot, we can see that the sample average of $\hat{μ}$ across
+  tests for which the null is rejected approximately equal to the true
+  value of μ.
+
+- This is because the samples were randomly generated from
+  x∼Normal\[μ,σ\], and when the number of samples (and null rejected
+  samples) is large enough, their mean distribution tend to be
+  approximately **symmetric** to the true μ due to the randomness,
+  causing the average of null rejected samples’ $\hat{μ}$ to be
+  approximately equal to μ.
