Problem 3 -- comments corrected

--- a/p8105_hw5_zl3386.md
+++ b/p8105_hw5_zl3386.md
@@ -437,12 +437,18 @@ results |>
 ![](p8105_hw5_zl3386_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 - From the plot, we can see that the sample average of $\hat{μ}$ across
-  tests for which the null is rejected approximately equal to the true
-  value of μ.
+  tests for which the null is rejected **does not** equal to the true
+  value of μ, especially when μ is close to null value 0 (e.g. μ = 1,
+  2).
 
-- This is because the samples were randomly generated from
-  x∼Normal\[μ,σ\], and when the number of samples (and null rejected
-  samples) is large enough, their mean distribution tend to be
-  approximately **symmetric** to the true μ due to the randomness,
-  causing the average of null rejected samples’ $\hat{μ}$ to be
-  approximately equal to μ.
+- This is because rejecting the null means that the sample mean is
+  significantly different from 0, but this does not imply that the
+  sample mean is close to the true μ. And when μ is close to null value
+  0, there will be a smaller proportion of null rejected samples, making
+  the average estimate more sensitive to random error.
+
+- However, when μ is far larger than 0, as we learned from the
+  association between effect size and power, most of the samples will
+  have the null rejected. In this case, the average estimate is close to
+  that in all samples, which is approximately equal to the true value of
+  μ.
